--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <main class = "intro">
-        <img class = "profile" src= "images\profile.jpg" />
+        <img class = "profile" src= "images/profile.jpg" />
 
         <div class = "introText">
-            <h1>Hello! I'm <span style="color: aqua;">Nick</span></h1>
+            <h1>Hello! I'm <span style="color: blue;">Nick</span></h1>
             <p><strong>A Computer Science Student @ Simon Fraser University</strong></p>
             <p><strong>Welcome to my page!</strong></p>
             <p><strong>Learn about me from the menu above.</strong></p>
