Replace profile image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main class = "intro">
-        <img class = "profile" src= "images/profile.jpg" />
+        <img class = "profile" src= "images/profile.png" />
 
         <div class = "introText">
             <h1>Hello! I'm <span style="color: blue;">Nick</span></h1>
