--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class = "navbar">
+        <div class = "name">
+            <h1><strong>Nick Ze Kun<br>Lei</strong></h1>
+        </div>
+        <nav class = "menu">
+            <a href ="#" class = "activeA">Home</a>
+            <a href ="#" class = "activeB">Personal Activities</a>
+            <a href ="#" class = "activeC">Interests</a>
+            <a href ="#" class = "activeD">More About Me</a>
+        </nav>
+        <div class = "location">
+            <p><strong>Canada, BC</strong></p>
+        </div>
+    </header>
+
     <main class = "intro">
         <img class = "profile" src= "images/profile.png" />
 
