Add working dropdowns on navigation bar

--- a/projects.html
+++ b/projects.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Nick's Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Projects | Nick's Website</title>
+    <link rel="stylesheet" href="stylesProjects.css">
 </head>
 <body>
     <header class = "navbar">
@@ -37,31 +37,5 @@
             <p><strong>Canada, BC  </strong></p>
         </div>
     </header>
-
-    <main class = "intro">
-        <img class = "profile" src = "images/profile.png" />
-
-        <div class = "introText">
-            <h1>Hello! I'm <span style = "color: blue;">Nick</span></h1>
-            <p><strong>A Computer Science Student @ Simon Fraser University</strong></p>
-            <p><strong>Welcome to my page!</strong></p>
-            <p><strong>Learn about me from the menu above.</strong></p>
-        </div>
-    </main>
-    
-    <div class = "contacts">
-        <h1>Contacts:</h1>
-        <div class = "contactExternals">
-            <a href = "tell:12368627277" class = "cell">
-                <img class = "iconLinkedin" src = "images/phone.png"/>
-            </a>
-            <a href = "mailto:20051024nick@gmail.com" class = "email">
-                <img class = "iconGmail" src = "images/gmail.png"/>
-            </a>
-            <a href = "https://www.linkedin.com/in/nickl24/" class = "linkedin" target = "_blank">
-                <img class = "iconLinkedin" src = "images/linkedin.png"/>
-            </a>
-        </div>
-    </div>
 </body>
 </html>
