Add alt text and improve styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class = "intro">
-        <img class = "profile" src = "images/profile.png" />
+        <img class = "profile" src = "images/profile.png" alt = "Profile Photo" />
 
         <div class = "introText">
             <h1>Hello! I'm <span style = "color: blue;">Nick</span></h1>
@@ -53,13 +53,13 @@
         <h1>Contacts:</h1>
         <div class = "contactExternals">
             <a href = "tell:12368627277" class = "cell">
-                <img class = "iconLinkedin" src = "images/phone.png"/>
+                <img class = "iconPhone" src = "images/iconPhoneImage.png" alt = "Phone Icon" />
             </a>
             <a href = "mailto:20051024nick@gmail.com" class = "email">
-                <img class = "iconGmail" src = "images/gmail.png"/>
+                <img class = "iconEmail" src = "images/iconEmailImage.png" alt = "Email Icon"/>
             </a>
             <a href = "https://www.linkedin.com/in/nickl24/" class = "linkedin" target = "_blank">
-                <img class = "iconLinkedin" src = "images/linkedin.png"/>
+                <img class = "iconLinkedin" src = "images/iconLinkedinImage.png" alt = "LinkedIn Icon"/>
             </a>
         </div>
     </div>
