Improve text visuals

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class = "navbar">
         <div class = "name">
-            <h1><strong>  Nick Ze Kun<br>  Lei</strong></h1>
+            <h1>Nick Ze Kun<br>Lei</h1>
         </div>
 
         <nav class = "menu">
@@ -38,7 +38,7 @@
         </nav>
 
         <div class = "location">
-            <p><strong>Canada, BC  </strong></p>
+            <h1>Canada, BC</h1>
         </div>
     </header>
 
@@ -47,14 +47,13 @@
 
         <div class = "introText">
             <h1>Hello! I'm <span style = "color: blue;">Nick</span></h1>
-            <p><strong>A Computer Science Student @ Simon Fraser University</strong></p>
-            <p><strong>Welcome to my page!</strong></p>
-            <p><strong>Learn about me from the menu above.</strong></p>
+            <p>A Computer Science Student @ Simon Fraser University</p>
+            <p>Welcome to my page!</p>
+            <p>Learn about me from the menu above.</p>
         </div>
     </main>
     
     <div class = "contacts">
-        <h1>Contacts:</h1>
         <div class = "contactExternals">
             <a href = "tell:12368627277" class = "cell">
                 <img class = "iconPhone" src = "images/iconPhoneImage.png" alt = "Phone icon for calling Nick" />
