--- a/competitions.html
+++ b/competitions.html
@@ -12,7 +12,7 @@
 <body>
     <header class = "navbar">
         <div class = "name">
-            <h1><strong>  Nick Ze Kun<br>  Lei</strong></h1>
+            <h1>Nick Ze Kun<br>Lei</h1>
         </div>
 
         <nav class = "menu">
@@ -38,7 +38,7 @@
         </nav>
 
         <div class = "location">
-            <p><strong>Canada, BC  </strong></p>
+            <h1>Canada, BC</h1>
         </div>
     </header>
 </body>
