Add Github External Link

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <a href = "https://www.linkedin.com/in/nickl24/" class = "linkedin" target = "_blank">
                 <img class = "iconLinkedin" src = "images/iconLinkedinImage.png" alt = "LinkedIn icon linking to Nick's profile"/>
             </a>
+            <a href = "https://github.com/niickzl" class = "github" target = "_blank">
+                <img class = "iconGithub" src = "images/iconGithubImage.png" alt = "GitHub icon linking to Nick's profile"/>
+            </a>
         </div>
     </div>
 </body>
