--- a/index.html
+++ b/index.html
@@ -53,21 +53,19 @@
         </div>
     </main>
     
-    <div class = "contacts">
-        <div class = "contactExternals">
-            <a href = "tell:12368627277" class = "cell">
-                <img class = "iconPhone" src = "images/iconPhoneImage.png" alt = "Phone icon for calling Nick" />
-            </a>
-            <a href = "mailto:20051024nick@gmail.com" class = "email">
-                <img class = "iconEmail" src = "images/iconEmailImage.png" alt = "Email icon for emailing Nick"/>
-            </a>
-            <a href = "https://www.linkedin.com/in/nickl24/" class = "linkedin" target = "_blank">
-                <img class = "iconLinkedin" src = "images/iconLinkedinImage.png" alt = "LinkedIn icon linking to Nick's profile"/>
-            </a>
-            <a href = "https://github.com/niickzl" class = "github" target = "_blank">
-                <img class = "iconGithub" src = "images/iconGithubImage.png" alt = "GitHub icon linking to Nick's profile"/>
-            </a>
-        </div>
-    </div>
+    <footer class = "contactExternals">
+        <a href = "tell:12368627277" class = "cell">
+            <img class = "iconPhone" src = "images/iconPhoneImage.png" alt = "Phone icon for calling Nick" />
+        </a>
+        <a href = "mailto:20051024nick@gmail.com" class = "email">
+            <img class = "iconEmail" src = "images/iconEmailImage.png" alt = "Email icon for emailing Nick"/>
+        </a>
+        <a href = "https://www.linkedin.com/in/nickl24/" class = "linkedin" target = "_blank">
+            <img class = "iconLinkedin" src = "images/iconLinkedinImage.png" alt = "LinkedIn icon linking to Nick's profile"/>
+        </a>
+        <a href = "https://github.com/niickzl" class = "github" target = "_blank">
+            <img class = "iconGithub" src = "images/iconGithubImage.png" alt = "GitHub icon linking to Nick's profile"/>
+        </a>
+    </footer>
 </body>
 </html>
