Add all necessary content to About Me page

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -12,7 +12,7 @@
 <body>
     <header class = "navbar">
         <div class = "name">
-            <h1><strong>  Nick Ze Kun<br>  Lei</strong></h1>
+            <h1>Nick Ze Kun<br>Lei</h1>
         </div>
 
         <nav class = "menu">
@@ -38,8 +38,77 @@
         </nav>
 
         <div class = "location">
-            <p><strong>Canada, BC  </strong></p>
+            <h1>Canada, BC</h1>
         </div>
     </header>
+
+    <main>
+        <div class = "intro">
+            <img class = "introPhoto" src = "images/profile.png" alt = "Nick Lei's profile photo" />
+
+            <div class = "introText">
+                <h1>Currently...</h1>
+                <p>I am a 2nd year, undergraduate student at <span style = "color: blue;">Simon Fraser</span>
+                    <br><span style = "color: blue;">University</span>, studying for a bachelor's in <span style = "color: blue;">computer science</span> with a
+                    <br>minor in <span style = "color: blue;">business</span>.
+                </p>
+            </div>
+        </div>
+        <div class = "background">
+            <div class = "backgroundText">
+                <h1>I come from a...</h1>
+                <p><span style = "color: blue;">Chinese</span> background, but I was born in <span style = "color: blue;">Canada</span>. 
+                    <br>I attended a private school in China until Grade 4,
+                    <br>then moved back and have been living in Canada since.
+                    <br>That's why I'm fully fluent in <span style = "color: blue;">English</span>, <span style = "color: blue;">Mandarin</span>, 
+                    <br>and <span style = "color: blue;">Cantonese</span>
+                </p>
+            </div>
+
+            <img class = "backgroundPhoto" src = "images/babyPhoto.jpg" alt = "Nick Lei's baby photo" />
+        </div>
+        <div class = "future">
+            <img class = "futurePhoto" src = "images/cmpt120Photo.jpg" alt = "CMPT 120 project image" />
+
+            <div class = "futureText">
+                <h1>In the future...</h1>
+                <p>I would like to pursue a career in 
+                <br><span style = "color: blue;">Software Development</span>, <span style = "color: blue;">Cyber
+                <br>Security</span>, or <span style = "color: blue;">Project Management</span>.
+                </p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class = "preFooter">
+            <h1><span style = "color: blue;">Thank you</span> for visiting my website!
+            <br> Feel free to reach out!
+            </h1>
+        </div>
+        <div class = "contactExternals">
+            <a href = "tell:12368627277" class = "cell">
+                <img class = "iconPhone" src = "images/iconPhoneImage.png" alt = "Phone icon for calling Nick" />
+            </a>
+            <a href = "mailto:20051024nick@gmail.com" class = "email">
+                <img class = "iconEmail" src = "images/iconEmailImage.png" alt = "Email icon for emailing Nick"/>
+            </a>
+            <a href = "https://www.linkedin.com/in/nickl24/" class = "linkedin" target = "_blank">
+                <img class = "iconLinkedin" src = "images/iconLinkedinImage.png" alt = "LinkedIn icon linking to Nick's profile"/>
+            </a>
+            <a href = "https://github.com/niickzl" class = "github" target = "_blank">
+                <img class = "iconGithub" src = "images/iconGithubImage.png" alt = "GitHub icon linking to Nick's profile"/>
+            </a>
+            <a href = "https://www.youtube.com/@nickzl24" class = "youtube" target = "_blank">
+                <img class = "iconYoutube" src = "images/iconYoutubeImage.png" alt = "YouTube icon linking to Nick's profile"/>
+            </a>
+            <a href = "https://www.chess.com/member/hiiamnick" class = "chess" target = "_blank">
+                <img class = "iconChess" src = "images/iconChessImage.png" alt = "Chess icon linking to Nick's profile"/>
+            </a>
+            <a href = "files/resume.pdf" class = "resume" target = "_blank">
+                <img class = "iconResume" src = "images/iconResumeImage.png" alt = "Resume PDF to Nick's profile"/>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
