--- a/chess.html
+++ b/chess.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Softwares | Nick's Website</title>
-    <link rel="stylesheet" href="stylesSoftwares.css">
+    <title>Chess | Nick's Website</title>
+    <link rel="stylesheet" href="stylesChess.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
                 <a href = "" class = "activeInterest">Interests</a>
                 <div class = "dropdownInterestContent">
                     <a href = "photography.html">Photography</a>
-                    <a href = "softwares.html">Softwares</a>
+                    <a href = "chess.html">Chess</a>
                 </div>
             </div>
 
