--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href = "" class = "activeInterest">Interests</a>
                 <div class = "dropdownInterestContent">
                     <a href = "photography.html">Photography</a>
-                    <a href = "softwares.html">Softwares</a>
+                    <a href = "chess.html">Chess</a>
                 </div>
             </div>
 
