Fix grammar mistake on Chess page

--- a/chess.html
+++ b/chess.html
@@ -51,7 +51,7 @@
 
                 <ul><h2>This page will display games I've played:
                 <li><span style = "color: blue">Title format:</span> (My Rating) vs (Opponent Rating) [(Mode)] (Game Review)</li>
-                    <li>My side the always the bottom of the board</li>
+                    <li>My side is always on the bottom of the board</li>
                 </h2></ul>
             </div>
             <a href = "https://www.chess.com/member/hiiamnick" class = "chessAccount" target = "_blank">
